<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AudioActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/audio_textview"
        android:textColor="@color/field1"
        android:textSize="16pt"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/video_he_text"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/audio_textview"
        android:background="@drawable/button_style"
        android:id="@+id/audio_hangup"
        android:text="@string/audio_hangup"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toRightOf="@+id/audio_hangup"
        app:layout_constraintTop_toBottomOf="@+id/audio_textview"
        android:background="@drawable/button_style"
        android:id="@+id/audio_silence"
        android:text="@string/audio_silence"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toRightOf="@+id/audio_silence"
        app:layout_constraintTop_toBottomOf="@+id/audio_textview"
        android:background="@drawable/button_style"
        android:id="@+id/audio_loud"
        android:text="@string/audio_loud"/>

</android.support.constraint.ConstraintLayout>