<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.VideoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/video_textview"
        android:textColor="@color/field1"
        android:textSize="16pt"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/video_he_text"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video_textview"
        android:id="@+id/video_hangup"
        android:text="@string/video_hangup"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toRightOf="@+id/video_hangup"
        app:layout_constraintTop_toBottomOf="@+id/video_textview"
        android:id="@+id/video_switch"
        android:text="@string/video_switch"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toRightOf="@+id/video_switch"
        app:layout_constraintTop_toBottomOf="@+id/video_textview"
        android:id="@+id/video_rotate"
        android:text="@string/video_rotate"/>

    <SurfaceView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@+id/video_hangup"
        android:layout_margin="5dp"
        android:id="@+id/video_me_surface"/>

    <SurfaceView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@+id/video_me_surface"
        android:id="@+id/video_he_surface"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/video_me_surface"
        app:layout_constraintLeft_toLeftOf="@id/video_me_surface"
        android:id="@+id/video_me_textview"
        android:textColor="@color/field1"
        android:textSize="8pt"
        android:layout_margin="8dp"
        android:text="@string/video_me_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/video_he_surface"
        app:layout_constraintLeft_toLeftOf="@id/video_he_surface"
        android:id="@+id/video_he_textview"
        android:textColor="@color/field1"
        android:textSize="8pt"
        android:layout_margin="8dp"
        android:text="@string/video_he_text"/>

</android.support.constraint.ConstraintLayout>